sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:12: error: value term is not a member of Unit
possible cause: maybe a semicolon is missing before `value term'?
      } term = false
        ^